tests/diagnostics/array_element_mismatch.kal
# All elements of an array literal must have the same type.
[1, 2.0];
